--- a/streaming.html
+++ b/streaming.html
@@ -17,7 +17,7 @@
       <audio src="music/technicoloursupersong.mp3" id="audio"></audio>
 
       <div class="img-container">
-        <img src="images/yellowmarker.png" alt="music-cover" id="cover" />
+        <img src="images/technicoloursupersong.png" alt="music-cover" id="cover" />
       </div>
       <div class="navigation">
         <button id="prev" class="action-btn">
