--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <body>
+    <body onclick="window.location.href='streaming.html';"> 
 <title>aliceee.</title>
 
 <link rel="stylesheet" type="text/css" href="aliceee.css" />
