--- a/streaming.html
+++ b/streaming.html
@@ -32,6 +32,169 @@
       </div>
     </div>
 
+    
+        <!--  MP4, WebM, and Ogg -->
+<h3>aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alicealiceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alice
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alicaliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee. aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alicealiceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alice
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alicaliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.a aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alicealiceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alice
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alicaliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  ceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alicealiceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alice
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alicaliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.a
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.a
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee. aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee. aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alicealiceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alice
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alic ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.alicaliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.aliceee.
+  ceee.aliceee.
+  aliceee.aliceee.aliceee.aliceee.alice</h3>
+        <video  autoplay muted loop width="550">
+         
+          <source src="Untitled.mp4">
+          This broken
+      </video>   
+
     <style>
   @-webkit-keyframes argh-my-eyes {
     0%   { background-color: #ffe550; }
