--- a/streaming.html
+++ b/streaming.html
@@ -6,7 +6,45 @@
   
 
   <body>
+<div id="a">
 
+  <ul class="playlist" id="playlist">
+    <li class="current-song"><a href="music/technicoloursupersong.mp3">technicoloursupersong</a></li>
+    <li><a href="music/ultraflowerpopsong.mp3">ultraflowerpopsong</a></li>
+    <li><a href="music/afakesprogress.mp3">afakesprogress</a></li>
+    <li><a href="music/superbrightneonlight.mp3">superbrightneonlight</a></li>
+    <li><a href="music/neverbetter.mp3">neverbetter</a></li>
+    <li><a href="music/eye.mp3">eye</a></li>
+    <li><a href="music/musicfornotachoir.mp3">musicfornotachoir</a></li>
+    <li><a href="music/walkinghomealone.mp3">walkinghomealone</a></li>
+    <li><a href="music/ifitmeansthatimnothappy.mp3">ifitmeansthatimnothappy</a></li>
+    <li><a href="music/pin.mp3">pin</a></li>
+    <li><a href="music/pinkneonlight.mp3">pinkneonlight</a></li>
+    <li><a href="music/goodbye.mp3">goodbye</a></li>
+    <li><a href="music/heartbroken.mp3">heartbroken</a></li>
+    <li><a href="music/popsongsforpornstars.mp3">popsongsforpornstars</a></li>
+    <li><a href="music/breakthrough.mp3">breakthrough</a></li>
+    <li><a href="music/variationinterlude.mp3">variation/interlude</a></li>
+    <li><a href="music/underthelights.mp3">underthelights</a></li>
+    <li><a href="music/boy.mp3">boy</a></li>
+   <li><a href="music/allilluse.mp3">allilluse</a></li>
+<li><a href="music/hyperbandpopedit.mp3">hyperbandpopedit</a></li>
+<li><a href="music/summertime.mp3">...summertime</a></li>
+<li><a href="music/argument.mp3">argument</a></li>
+<li><a href="music/anti.mp3">anti</a></li>
+<li><a href="music/strings.mp3">strings</a></li>
+<li><a href="music/blueintothecity.mp3">blue/intothecity</a></li>
+<li><a href="music/settingup.mp3">settingup</a></li>
+
+
+
+
+
+
+</ul>
+
+
+</div>
     
 
     <link
@@ -22,6 +60,7 @@
    
   </head>
   <body>  
+    <div id="a">A</div>
     <div id="contextMenu" class="context-menu" style="display: none"> 
         <ul class="menu"> 
           
@@ -102,7 +141,10 @@
 
 
 
-
+ 
+  <script src="https://code.jquery.com/jquery-2.2.0.js"></script>
+  <script src="script.js"></script>
+  <script>
       // loads the audio player
       audioPlayer();
   </script>
