--- a/streaming.html
+++ b/streaming.html
@@ -6,11 +6,11 @@
   
 
   <body>
-<div id="a">
+<div id="songlist">
 
   <ul class="playlist" id="playlist">
     <li class="current-song"><a href="music/technicoloursupersong.mp3">technicoloursupersong</a></li>
-    <li><a href="music/ultraflowerpopsong.mp3">ultraflowerpopsong</a></li>
+    <li><a href="music/ultraflowerpopsong.mp3">ultraflowerpopsong </a></li>
     <li><a href="music/afakesprogress.mp3">afakesprogress</a></li>
     <li><a href="music/superbrightneonlight.mp3">superbrightneonlight</a></li>
     <li><a href="music/neverbetter.mp3">neverbetter</a></li>
@@ -60,7 +60,7 @@
    
   </head>
   <body>  
-    <div id="a">A</div>
+    <div id="a"></div>
     <div id="contextMenu" class="context-menu" style="display: none"> 
         <ul class="menu"> 
           
