--- a/streaming.html
+++ b/streaming.html
@@ -20,7 +20,7 @@
     <li><a href="music/ifitmeansthatimnothappy.mp3">ifitmeansthatimnothappy</a></li>
     <li><a href="music/pin.mp3">pin</a></li>
     <li><a href="music/pinkneonlight.mp3">pinkneonlight</a></li>
-    <li><a href="music/goodbye.mp3">goodbye</a></li>
+ 
     <li><a href="music/heartbroken.mp3">heartbroken</a></li>
     <li><a href="music/popsongsforpornstars.mp3">popsongsforpornstars</a></li>
     <li><a href="music/breakthrough.mp3">breakthrough</a></li>
@@ -29,7 +29,7 @@
     <li><a href="music/boy.mp3">boy</a></li>
    <li><a href="music/allilluse.mp3">allilluse</a></li>
 <li><a href="music/hyperbandpopedit.mp3">hyperbandpopedit</a></li>
-<li><a href="music/summertime.mp3">...summertime</a></li>
+<li><a href="music/...summertime.mp3">...summertime</a></li>
 <li><a href="music/argument.mp3">argument</a></li>
 <li><a href="music/anti.mp3">anti</a></li>
 <li><a href="music/strings.mp3">strings</a></li>
