--- a/streaming.html
+++ b/streaming.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 
     <link rel="stylesheet" href="streaming.css" />
-    <title></title>
+
   </head>
   
 
   <body>
+
+    <div id="title">
+      <h1>aliceee</h1>
+    </div>
 <div id="songlist">
 
   <ul class="playlist" id="playlist">
