--- a/streaming.html
+++ b/streaming.html
@@ -6,7 +6,9 @@
   
 
   <body>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>aliceee</title>
+  
     <div id="title">
       <h1>aliceee</h1>
     </div>
@@ -57,7 +59,7 @@
   />
     <h1></h1>
        <meta charset="UTF-8" />
-    <title>Custom Right Click Menu</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
