--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,10 @@
 
   <ul class="playlist" id="playlist">
     <li class="current-song"><a href="music/technicoloursupersong.mp3">technicoloursupersong</a></li>
+
     <li><a href="music/ultraflowerpopsong.mp3">ultraflowerpopsong </a></li>
     <li><a href="music/afakesprogress.mp3">afakesprogress</a></li>
-    <li><a href="music/superbrightneonlight.mp3">superbrightneonlight</a></li>
+    <li><a href="music/SuperBrightNeonLight.mp3">superbrightneonlight</a></li>
     <li><a href="music/neverbetter.mp3">neverbetter</a></li>
     <li><a href="music/eye.mp3">eye</a></li>
     <li><a href="music/musicfornotachoir.mp3">musicfornotachoir</a></li>
@@ -47,21 +48,80 @@
 
 
 VIDEOS
+<p style="color: black";">neverbetter </p>
 
-<video width="320" height="240" controls>
+<video width="320" height="240" controls object-position="left">
+  
   <source src="neverbetter.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
-
+<p style="color: black";">heartbroken </p>
 <video width="320" height="240" controls>
+
   <source src="heartbroken.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
 
 
+<p style="color: black";">ultraflowerpopsong </p>
+<video width="320" height="240" controls>
+
+  <source src="ultraflowerpopsong.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
 
 
+<p style="color: black";">popup </p>
+<video width="320" height="240" controls>
 
+  <source src="popup.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
+
+<p style="color: black";">neverbetter (Instagram/TikTok) </p>
+<video width="320" height="240" controls>
+
+  <source src="neverbetter clip.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
+
+<p style="color: black";">superbrightneonlight (Instagram/TikTok) </p>
+<video width="320" height="240" controls>
+
+  <source src="superbrightneonlight instagram.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
+
+
+<p style="color: black";">afakesprogress (YouTube) </p>
+<video width="320" height="240" controls>
+
+  <source src="afakesprogress.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
+
+
+<p style="color: black";">technicoloursupersong (YouTube) </p>
+<video width="320" height="240" controls>
+
+  <source src="technicoloursupersong.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
+
+<p style="color: black";">ifitmeansthatimnothappy 1 (Instagram/TikTok) </p>
+<video width="320" height="240" controls>
+
+  <source src="ifitmeans instagram.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
+
+
+<p style="color: black";">ifitmeansthatimnothappy 2 (Instagram/TikTok) </p>
+<video width="320" height="240" controls>
+
+  <source src="if it means 2 insta.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
 
 </ul>
 
