--- a/index1.html
+++ b/index1.html
@@ -3,231 +3,129 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dynamic WAV Player</title>
+  <title>Seamless Audio Switch</title>
   <style>
-    /* Base styles for body */
     body {
       font-family: Arial, sans-serif;
       text-align: center;
-      color: #ffd900;
+      background-color: #ffd900;
+      color: #333;
       margin: 0;
       padding: 0;
       height: 100vh;
-      background-color: rgba(255, 231, 97, 255);
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
     }
 
-    /* Title Styling */
     h1 {
-      color: #ffff88;
+      color: #fff;
       font-size: 2.5rem;
       margin-bottom: 40px;
     }
 
-    /* 3D solid yellow play button */
-    #playPause {
+    button {
       width: 120px;
-      height: 120px;
-      background: #ffe550; /* Solid yellow */
-      border: none;
-      border-radius: 50%;
-      box-shadow: 0px 4px 10px rgba(255, 133, 12, 0.4);
-      cursor: pointer;
-      font-size: 24px;
-      font-weight: bold;
-      color: rgb(0, 0, 0);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 40px;
-    }
-
-    #playPause:active {
-      box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.4), inset 0px 2px 6px rgba(255, 255, 255, 0.3);
-    }
-
-    /* Styling for the 3D iPod-style dial */
-    #randomnessControl {
-      width: 200px;
-      height: 200px;
-      background: radial-gradient(circle, #ffe5500 0%, #ffe550 80%);
-      border-radius: 50%;
-      box-shadow: rgba(255, 133, 12, 0.4);
-      position: relative;
-      margin-bottom: 40px;
-      transition: box-shadow 0.2s;
-    }
-
-    #randomnessControl.active {
-      box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3), 
-                  inset 0px 5px 15px rgba(255, 255, 255, 0.5), 
-                  0px 0px 20px rgba(255, 238, 0, 0.8); /* Yellow glow */
-    }
-
-    /* Knob styles */
-    #dialKnob {
-      width: 20px;
-      height: 20px;
+      height: 50px;
       background: #ffe550;
-      border-radius: 50%;
-      position: absolute;
-      top: 15px;
-      left: 90px;
-      transform-origin: 50% 90px;
-      transform: rotate(0deg);
-    }
-
-    #dialDot {
-      width: 8px;
-      height: 8px;
-      background: #ffdc19;
-      border-radius: 50%;
-      position: absolute;
-      top: 6px;
-      left: 6px;
-    }
-
-    /* Randomness level label */
-    #label {
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
       font-size: 18px;
-      margin-top: 10px;
-      color: #fff129;
+      font-weight: bold;
+      color: #000;
+      margin-bottom: 20px;
+    }
+
+    button:active {
+      background: #ffd700;
+    }
+
+    #randomnessControl {
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
-  <h1>Dynamic WAV Player</h1>
+  <h1>1Seamless WAV Player</h1>
   <button id="playPause">Play</button>
-  <p id="status">Stopped</p>
-
+  <p id="status">Status: Stopped</p>
   <div id="randomnessControl">
-    <div id="dialKnob">
-      <div id="dialDot"></div>
-    </div>
+    <label for="randomness">Randomness Level: </label>
+    <input type="range" id="randomness" min="1" max="10" value="5">
+    <span id="randomnessValue">5</span>
   </div>
-  <p id="label">Randomness: 5</p>
 
   <script>
-    const songVersions = [
-      "song1.wav", // Replace with your actual WAV file URLs
-      "song2.wav",
-      "song3.wav",
-    ];
-
+    const songFiles = ["song1.wav", "song2.wav", "song3.wav"]; // Replace with actual file paths
     const audioContext = new (window.AudioContext || window.webkitAudioContext)();
     const audioBuffers = [];
-    const gainNodes = [];
-    let currentSource = null;
     let isPlaying = false;
-    let switchTimeout = null;
-    let randomnessLevel = 5;
+    let currentSource = null;
+    let currentStartTime = 0;
+    let playbackStartTime = 0;
+    let switchInterval = null;
+    let randomnessLevel = 5; // Default randomness level
 
-    // Load WAV files into audio buffers
-    async function loadAudio() {
-      for (const url of songVersions) {
-        const response = await fetch(url);
+    async function loadAudioFiles() {
+      for (const file of songFiles) {
+        const response = await fetch(file);
         const arrayBuffer = await response.arrayBuffer();
         const audioBuffer = await audioContext.decodeAudioData(arrayBuffer);
         audioBuffers.push(audioBuffer);
-
-        // Create gain node for smooth transitions
-        const gainNode = audioContext.createGain();
-        gainNode.gain.setValueAtTime(0, audioContext.currentTime);
-        gainNodes.push(gainNode);
+        console.log(`Loaded ${file}`);
       }
     }
 
-    // Function to play a specific track
-    function playTrack(index) {
-      if (currentSource) currentSource.stop(); // Stop the previous track
-
+    function playBuffer(buffer, startTime) {
       const source = audioContext.createBufferSource();
-      source.buffer = audioBuffers[index];
-      source.loop = true;
-
-      source.connect(gainNodes[index]).connect(audioContext.destination);
-
-      currentSource = source;
-      source.start(0);
-
-      // Smoothly fade in the chosen track
-      gainNodes.forEach((gainNode, i) => {
-        gainNode.gain.cancelScheduledValues(audioContext.currentTime);
-        if (i === index) {
-          gainNode.gain.linearRampToValueAtTime(1, audioContext.currentTime + 0.2); // Fade in
-        } else {
-          gainNode.gain.linearRampToValueAtTime(0, audioContext.currentTime + 0.2); // Fade out
-        }
-      });
+      source.buffer = buffer;
+      source.connect(audioContext.destination);
+      source.start(0, startTime % buffer.duration);
+      return source;
     }
 
-    // Function to switch tracks randomly
     function switchTrack() {
-      const nextIndex = Math.floor(Math.random() * songVersions.length);
-      playTrack(nextIndex);
+      const activeIndex = Math.floor(Math.random() * audioBuffers.length);
+      const elapsedTime = audioContext.currentTime - playbackStartTime;
+      if (currentSource) currentSource.stop();
 
-      const nextSwitchTime = Math.random() * (2000 / randomnessLevel) + (1000 / randomnessLevel);
-      clearTimeout(switchTimeout);
-      switchTimeout = setTimeout(switchTrack, nextSwitchTime);
+      currentSource = playBuffer(audioBuffers[activeIndex], elapsedTime);
+      console.log(`Switched to track: ${activeIndex}, Elapsed Time: ${elapsedTime.toFixed(2)}s`);
+
+      // Adjust switching interval based on randomness level
+      const interval = Math.random() * (2000 / randomnessLevel) + (1000 / randomnessLevel);
+      clearInterval(switchInterval);
+      switchInterval = setTimeout(switchTrack, interval);
     }
 
-    // Play/Pause functionality
     document.getElementById("playPause").addEventListener("click", async () => {
       if (!isPlaying) {
-        if (audioBuffers.length === 0) await loadAudio(); // Load audio on the first play
+        if (audioBuffers.length === 0) await loadAudioFiles();
 
+        playbackStartTime = audioContext.currentTime;
+        currentSource = playBuffer(audioBuffers[0], 0);
         isPlaying = true;
-        document.getElementById("status").innerText = "Playing...";
+
+        document.getElementById("status").innerText = "Status: Playing";
         document.getElementById("playPause").innerText = "Pause";
 
-        switchTrack();
+        switchTrack(); // Start switching
       } else {
         if (currentSource) currentSource.stop();
-        isPlaying = false;
-        document.getElementById("status").innerText = "Stopped.";
-        document.getElementById("playPause").innerText = "Play";
+        clearTimeout(switchInterval);
 
-        clearTimeout(switchTimeout);
+        isPlaying = false;
+        document.getElementById("status").innerText = "Status: Stopped";
+        document.getElementById("playPause").innerText = "Play";
       }
     });
 
-    // Randomness Dial Control
-    const dialKnob = document.getElementById("dialKnob");
-    const randomnessControl = document.getElementById("randomnessControl");
-    const label = document.getElementById("label");
-
-    let angle = 0;
-
-    randomnessControl.addEventListener("mousedown", function () {
-      randomnessControl.classList.add("active");
-
-      function rotateDial(event) {
-        const rect = randomnessControl.getBoundingClientRect();
-        const centerX = rect.left + rect.width / 2;
-        const centerY = rect.top + rect.height / 2;
-        const dx = event.clientX - centerX;
-        const dy = event.clientY - centerY;
-
-        const newAngle = Math.atan2(dy, dx) * (180 / Math.PI) + 90;
-        angle = Math.max(0, Math.min(270, newAngle));
-        dialKnob.style.transform = `rotate(${angle}deg)`;
-
-        randomnessLevel = Math.round((angle / 270) * 10);
-        randomnessLevel = Math.max(1, randomnessLevel);
-        label.textContent = `Randomness: ${randomnessLevel}`;
-      }
-
-      function stopRotating() {
-        randomnessControl.classList.remove("active");
-        window.removeEventListener("mousemove", rotateDial);
-        window.removeEventListener("mouseup", stopRotating);
-      }
-
-      window.addEventListener("mousemove", rotateDial);
-      window.addEventListener("mouseup", stopRotating);
+    document.getElementById("randomness").addEventListener("input", (event) => {
+      randomnessLevel = event.target.value;
+      document.getElementById("randomnessValue").innerText = randomnessLevel;
+      console.log(`Randomness Level: ${randomnessLevel}`);
     });
   </script>
 </body>
