--- a/index1.html
+++ b/index1.html
@@ -58,7 +58,7 @@
   </div>
 
   <script>
-    const songFiles = ["song1.wav", "song2.wav", "song3.wav"]; // Replace with actual file paths
+    const songFiles = ["song1.mp3", "song2.mp3", "song3.mp3"]; // Replace with actual file paths
     const audioContext = new (window.AudioContext || window.webkitAudioContext)();
     const audioBuffers = [];
     let isPlaying = false;
