--- a/index1.html
+++ b/index1.html
@@ -109,7 +109,7 @@
   <p id="label">randomness: 5</p>
 
   <script>
-    const songFiles = ["song1test.mp3", "song2test.mp3", "song3test.mp3"]; // Replace with actual .wav file paths
+    const songFiles = ["song1.wav", "song2.wav", "song3.wav"]; // Replace with actual .wav file paths
     const audioContext = new (window.AudioContext || window.webkitAudioContext)();
     const audioBuffers = [];
     let isPlaying = false;
