--- a/index1.html
+++ b/index1.html
@@ -159,7 +159,7 @@
         isPlaying = true;
 
         document.getElementById("status").innerText = "playing...";
-        document.getElementById("playPause").innerText = "pause";
+        document.getElementById("playPause").innerText = ".";
 
         switchTrack();
       } else {
