--- a/index1.html
+++ b/index1.html
@@ -38,7 +38,7 @@
       cursor: pointer;
       font-size: 24px;
       font-weight: bold;
-      color: rgb(0, 0, 0);
+      color: #ffff88;
       display: flex;
       align-items: center;
       justify-content: center;
