--- a/index1.html
+++ b/index1.html
@@ -31,7 +31,7 @@
     #playPause {
       width: 120px;
       height: 120px;
-      background: #ffd900;
+      background: ##ffe5500;
       border: none;
       border-radius: 50%;
       box-shadow: 0px 4px 10px rgba(255, 133, 12, 0.4);
