--- a/index1.html
+++ b/index1.html
@@ -31,7 +31,7 @@
     #playPause {
       width: 120px;
       height: 120px;
-      background: #ffe5500;
+      background: rgba(255, 231, 97, 255);
       border: none;
       border-radius: 50%;
       box-shadow: 0px 4px 10px rgba(255, 133, 12, 0.4);
