--- a/index1.html
+++ b/index1.html
@@ -38,7 +38,7 @@
       cursor: pointer;
       font-size: 24px;
       font-weight: bold;
-      color: #ffe5500;
+      color: rgba(255, 133, 12, 0.4);
       display: flex;
       align-items: center;
       justify-content: center;
