--- a/index1.html
+++ b/index1.html
@@ -9,7 +9,7 @@
     body {
       font-family: Arial, sans-serif;
       text-align: center;
-      color: #ffd900;
+      color: rgba(255, 231, 97, 255);
       margin: 0;
       padding: 0;
       height: 100vh;
