--- a/index1.html
+++ b/index1.html
@@ -53,9 +53,10 @@
     #randomnessControl {
       width: 200px;
       height: 200px;
-      background: radial-gradient(circle, #ffe550 0%, #ffe550 80%);
+      background-color: #ffe550; /* Fallback color */
+      background: radial-gradient(circle, #ffe550 0%, #ffcc00 80%);
       border-radius: 50%;
-      box-shadow: rgba(255, 133, 12, 0.4);
+      box-shadow: 0px 4px 10px rgba(255, 133, 12, 0.4);
       position: relative;
       margin-bottom: 40px;
       transition: box-shadow 0.2s;
@@ -70,7 +71,7 @@
     #dialKnob {
       width: 20px;
       height: 20px;
-      background: #ffe550;
+      background: #ffcc00;
       border-radius: 50%;
       position: absolute;
       top: 15px;
