--- a/index1.html
+++ b/index1.html
@@ -53,10 +53,9 @@
     #randomnessControl {
       width: 200px;
       height: 200px;
-      background-color: #ffe550; /* Fallback color */
-      background: radial-gradient(circle, #ffe550 0%, #ffcc00 80%);
+      background: radial-gradient(circle, #ffe550 0%, #ffe550 80%);
       border-radius: 50%;
-      box-shadow: 0px 4px 10px rgba(255, 133, 12, 0.4);
+      box-shadow: rgba(255, 133, 12, 0.4);
       position: relative;
       margin-bottom: 40px;
       transition: box-shadow 0.2s;
@@ -71,7 +70,7 @@
     #dialKnob {
       width: 20px;
       height: 20px;
-      background: #ffcc00;
+      background: #ffe550;
       border-radius: 50%;
       position: absolute;
       top: 15px;
@@ -228,3 +227,4 @@
   </script>
 </body>
 </html>
+
