--- a/index1.html
+++ b/index1.html
@@ -53,7 +53,7 @@
     #randomnessControl {
       width: 200px;
       height: 200px;
-      background: radial-gradient(circle, #ffe550 0%, #ffe550 80%);
+      background: radial-gradient(circle, #ffe5500 0%, #ffe550 80%);
       border-radius: 50%;
       box-shadow: rgba(255, 133, 12, 0.4);
       position: relative;
